# JamAIBase

./: .dockerignore  .env  .env.example  .flake8  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc  AGENTS.md  Agents.md  CHANGELOG.md  CLAUDE.md  MIGRATION_GUIDE.md  README.md  VERSIONING.md
clients/python/: README.md  pyproject.toml
clients/python/src/jamaibase/: __init__.py  client.py  exceptions.py  protocol.py
clients/python/src/jamaibase/types/: __init__.py  billing.py  common.py  compat.py  conversation.py  db.py  file.py  gen_table.py  legacy.py  lm.py  logs.py  mcp.py  model.py  telemetry.py
clients/python/src/jamaibase/utils/: __init__.py  background_loop.py  dates.py  exceptions.py  io.py  types.py  versioning.py
clients/python/tests/: case_embed_files.py  create_long_txt.py  list_test_files_as_json.py  populate_test_documents_minio.py  test_chat.py  test_embeddings.py  test_gen_executor.py  test_gen_table.py  test_io.py
clients/python/tests/_loader_check/: pdfloader__Swire_AR22_e_230406_sample.pdf.json  pdfloader__background-checks.pdf.json  pdfloader__sample_tables.pdf.json  split_documents__Swire_AR22_e_230406_sample.pdf.json  split_documents__background-checks.pdf.json  split_documents__sample_tables.pdf.json
clients/python/tests/cloud/: test_admin.py  test_org_admin.py
clients/python/tests/csv/: company-profile.csv
clients/python/tests/doc/: Recommendation Letter.doc
clients/python/tests/docx/: Recommendation Letter.docx
clients/python/tests/files/csv/: weather_observations_long.csv
clients/python/tests/files/html/: table.html
clients/python/tests/files/jsonl/: ChatMed_TCM-v0.2-5records.jsonl  llm-models.jsonl
clients/python/tests/files/pptx/: (2017.06.30) Neural Machine Translation in Linear Time (ByteNet).pptx
clients/python/tests/files/xlsx/: Claims Form.xlsx
clients/python/tests/html/: RAG and LLM Integration Guide.html  multilingual-code-examples.html
clients/python/tests/md/: creative-story.md
clients/python/tests/oss/: test_admin.py  test_chat.py  test_embeddings.py  test_file.py  test_gen_executor.py  test_io.py  test_template.py
clients/python/tests/oss/gen_table/: test_export_ops.py  test_row_ops.py  test_table_ops.py
clients/python/tests/xls/: Claims Form.xls
docker/: Dockerfile.cnpg17  amd.yml  (+26 more)
services/api/: CHANGELOG.md  Chat.md  README.md  api.spec  pyproject.toml
services/api/archived_tests/: test_cloud_client.py  test_crypt.py  test_gen_executor.py  test_gen_table.py  test_models.py  test_router_gen_table.py  test_utils.py
services/api/scripts/: recreate_template.py
services/api/src/owl/: __init__.py  billing.py  cache.py  client.py  config.py  docio.py  docparse.py  llm.py  loaders.py  models.json  models.py  protocol.py  unstructuredio.py  url_loader.py
services/api/src/owl/configs/: __init__.py  manager.py  models.json  models_aipc.json  models_ci.json  models_ollama.json  oss.py  preset_models.json
services/api/src/owl/db/: __init__.py  file.py  gen_executor.py  gen_table.py  gen_table_v2.py  oss_admin.py  template.py
services/api/src/owl/entrypoints/: api.py  chat_echo.py  chat_python.py  llm.py  starling.py
services/api/src/owl/routers/: auth.py  conversation.py  file.py  gen_table.py  gen_table_v1.py  llm.py  meters.py  models.py  notification.py  org_admin.py  oss_admin.py  serving.py  tasks.py  template.py  templates.py
services/api/src/owl/scripts/: backup_db.py  create_meters.py  update_db.py
services/api/src/owl/tasks/: checks.py  database.py  gen_table.py  genitor.py  restore.py  storage.py
services/api/src/owl/templates/: .gitignore
services/api/src/owl/types/: __init__.py  db.py
services/api/src/owl/utils/: __init__.py  auth.py  billing_metrics.py  cache.py  code.py  concurrency.py  crypt.py  dates.py  exceptions.py  gen_table_model_replace.py  handlers.py  io.py  ip_address.py  jwt.py  kb.py  lm.py  logging.py  loguru_otlp_handler.py  metrics.py  notifications.py  openapi.py  responses.py  tasks.py  test.py  types.py  victoriametrics.py
services/api/tests/: README.md  test_cloud_client.py  test_db.py  test_docparse.py  test_gen_executor.py  test_gen_table.py  test_lance.py  test_models.py  test_openai_compat.py  test_orchestrators.py  test_protocol.py  test_router_gen_table.py  test_types.py  test_utils.py
services/api/tests/docling_ground_truth/: (2017.06.30) NMT in Linear Time (ByteNet).json  Claims Form.json  GitHub 表单架构语法 - GitHub 文档.json  Swire_AR22_e_230406_sample.json
services/api/tests/files/exports/: export-v0.4-action.parquet  export-v0.4-chat-agent-1.parquet  export-v0.4-chat-agent.parquet  export-v0.4-knowledge.parquet  export-v0.4-project-long-name.parquet  export-v0.4-project.parquet
services/api/tests/files/json/: company-profile.json
services/api/tests/files/ppt/: (2017.06.30) Neural Machine Translation in Linear Time (ByteNet).ppt
services/api/tests/files/tiff/: cifar10-deer.tiff  rabbit.tiff
services/api/tests/files/tsv/: weather_observations.tsv
services/api/tests/files/txt/: creative-story.txt  weather.txt
services/api/tests/files/xml/: weather-forecast-service.xml
services/api/tests/gen_table/: test_concurrent_batches.py  test_empty_db.py  test_image_gen.py  test_import_export.py  test_row_ops.py  test_row_ops_v2.py  test_table_ops.py  test_table_ops_v2.py  test_v1.py
services/api/tests/gen_table_core/: test_gen_table_core.py
services/api/tests/routers/: test_conversation.py  test_models.py  test_notifications.py  test_organizations.py  test_projects.py  test_secrets.py  test_serving.py  test_serving_unit.py  test_templates.py  test_users.py
services/api/tests/utils/: test_auth.py  test_billing_event.py  test_crypt.py  test_dates.py  test_file.py  test_io.py  test_jwt.py  test_lm.py  test_mcp.py  test_model_replace.py  test_notification_utils.py  test_utils.py
services/docio/: .env  MANIFEST.in  README.md  docio.spec  pyproject.toml
services/docio/scripts/: GenerateWinExe.ps1  SetupWinExeEnv.ps1  validate_exe.py
services/docio/src/docio/: config.py  protocol.py
services/docio/tests/: test_loader.py
(+660 files in other folders)
