# See https://gitlab.liris.cnrs.fr/pagoda/tools/mkdocs_template/-/blob/master/user_config/pyproject.toml

# -----------------------------------------------------------------------------
# Pytest configuration
# https://docs.pytest.org/en/latest/customize.html?highlight=pyproject#pyproject-toml

[tool.pytest.ini_options]
log_cli = true
asyncio_mode = "auto"
# log_cli_level = "DEBUG"
addopts = "--cov=jamaibase --doctest-modules"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:tensorflow.*",
    "ignore::DeprecationWarning:tensorboard.*",
    "ignore::DeprecationWarning:matplotlib.*",
    "ignore::DeprecationWarning:flatbuffers.*",
]

# -----------------------------------------------------------------------------
# Black (Option-less formatter) configuration
# https://black.readthedocs.io/en/stable/index.html

[tool.black]
line-length = 99
target-version = ["py310"]
include = '\.pyi?$|\.ipynb'
extend-exclude = 'archive/*'

# -----------------------------------------------------------------------------
# For sorting imports
# This is used by VS Code to sort imports
# https://code.visualstudio.com/docs/python/editing#_sort-imports
# https://timothycrosley.github.io/isort/

[tool.isort]
# Profile
# Base profile type to use for configuration. Profiles include: black, django,
# pycharm, google, open_stack, plone, attrs, hug. As well as any shared profiles.
# Default: ``
profile = "black"
# Treat project as a git repository and ignore files listed in .gitignore
# Default: `False`
skip_gitignore = true
# The max length of an import line (used for wrapping long imports).
# Default: `79`
line_length = 99
known_first_party = ["jamaibase", "owl", "docio"]

# -----------------------------------------------------------------------------
# setuptools
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "jamaibase"
description = "JamAI Base: Let Your Database Orchestrate LLMs and RAG"
readme = "README.md"
requires-python = ">=3.10"
# keywords = ["one", "two"]
license = { text = "Apache 2.0" }
classifiers = [ # https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Information Technology",
    "Operating System :: Unix",
]
# Sort your dependencies https://sortmylist.com/
dependencies = [
    "httpx>=0.25.0",
    "loguru>=0.7.2",
    "numpy>=1.26.0",
    "orjson>=3.9.7",
    "Pillow>=10.0.1",
    "pyarrow>=15.0.0",
    "pydantic-settings>=2.0.3",
    "pydantic>=2.4.2",
    "sqlmodel>=0.0.16",
    "srsly>=2.4.8",
    "toml>=0.10.2",
    "tqdm>=4.66.1",
    "typing_extensions>=4.10.0",
    "uuid-utils~=0.6.1",
    "uuid7~=0.1.0",
]
dynamic = ["version"]

[project.optional-dependencies]
lint = ["black~=24.4.2", "flake8~=7.0.0"]
test = [
    "flaky~=3.7.0",
    "mypy~=1.5.1",
    "pytest-asyncio>=0.21.1",
    "pytest-cov~=4.1.0",
    "pytest~=7.4.2",
]
docs = [
    "furo~=2023.9.10",             # Sphinx theme (nice looking, with dark mode)
    "myst-parser~=2.0.0",
    "sphinx-autobuild~=2021.3.14",
    "sphinx-copybutton~=0.5.2",
    "sphinx~=7.2.6",
    "sphinx_rtd_theme~=1.3.0",     # Sphinx theme
]
build = [
    "build",
    "twine",
] # https://realpython.com/pypi-publish-python-package/#build-your-package
all = [
    "jamaibase[lint,test,docs,build]", # https://hynek.me/articles/python-recursive-optional-dependencies/
]

# [project.scripts]
# jamaibase = "jamaibase.scripts.example:main_cli"

[tool.setuptools.dynamic]
version = { attr = "jamaibase.version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
