# See https://gitlab.liris.cnrs.fr/pagoda/tools/mkdocs_template/-/blob/master/user_config/pyproject.toml

# -----------------------------------------------------------------------------
# Pytest configuration
# https://docs.pytest.org/en/latest/customize.html?highlight=pyproject#pyproject-toml

[tool.pytest.ini_options]
timeout = 120
log_cli = true
asyncio_mode = "auto"
# log_cli_level = "DEBUG"
addopts = "--doctest-modules -vv -ra --strict-markers --no-flaky-report"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:tensorflow.*",
    "ignore::DeprecationWarning:tensorboard.*",
    "ignore::DeprecationWarning:matplotlib.*",
    "ignore::DeprecationWarning:flatbuffers.*",
]
markers = ["oss: Cloud-only tests", "cloud: Cloud-only tests"]

# -----------------------------------------------------------------------------
# Coverage configuration
# https://coverage.readthedocs.io/en

[tool.coverage.run]
source = ["owl"]
relative_files = true
concurrency = ["multiprocessing", "thread", "greenlet"]
parallel = true

# [tool.coverage.paths]
# source = ["services/api/src", "src"]

# -----------------------------------------------------------------------------
# Ruff configuration
# https://docs.astral.sh/ruff/

[tool.ruff]
line-length = 99
indent-width = 4
target-version = "py312"
extend-include = [".pyi?$", ".ipynb"]
extend-exclude = ["archive/*"]
respect-gitignore = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E1", "E4", "E7", "E9", "F", "I", "W1", "W2", "W3", "W6", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["jamaibase", "owl", "polylm"]

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Path",
    "fastapi.Query",
]

# -----------------------------------------------------------------------------
# setuptools
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jamaibase"
description = "JamAI Base: Let Your Database Orchestrate LLMs and RAG"
readme = "README.md"
requires-python = ">=3.11"
# keywords = ["one", "two"]
license = "Apache-2.0"
classifiers = [ # https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Information Technology",
    "Operating System :: Unix",
]
# Sort your dependencies https://sortmylist.com/
# In general, for v1 and above, we pin to minor version using ~=
dependencies = [
    "filetype~=1.2",
    "httpx>=0.25.0",
    "loguru>=0.7.2",
    "natsort[fast]~=8.4",
    "numpy>=1.26.0",
    "orjson~=3.9",
    "pandas",
    "Pillow>=10.0",
    "pydantic-extra-types~=2.9",
    "pydantic-settings~=2.4",
    "pydantic[email,timezone]~=2.11",
    "pyyaml~=6.0",
    "toml~=0.10.2",
    "typing_extensions~=4.10",
    "uuid-utils~=0.9",
    "uuid7~=0.1",
]
dynamic = ["version"]

[project.optional-dependencies]
lint = ["ruff~=0.12.9"]
test = [
    "flaky~=3.8.1",
    "locust~=2.39.1",
    "mypy~=1.11.1",
    "pytest-asyncio>=0.23.8",
    "pytest-cov~=5.0.0",
    "pytest-timeout>=2.3.1",
    "pytest~=8.2.2",
    "sphinx-copybutton~=0.5.2",
    "sphinx>=7.0.0",
    "sphinx_rtd_theme~=2.0.0",  # Sphinx theme
]
build = [
    "build",
    "twine",
] # https://realpython.com/pypi-publish-python-package/#build-your-package
all = [
    "jamaibase[lint,test,docs,build]", # https://hynek.me/articles/python-recursive-optional-dependencies/
]

# [project.scripts]
# jamaibase = "jamaibase.scripts.example:main_cli"

[project.urls]
Homepage = "https://www.jamaibase.com/"
Documentation = "https://docs.jamaibase.com/"
Repository = "https://github.com/EmbeddedLLM/JamAIBase"
Changelog = "https://github.com/EmbeddedLLM/JamAIBase/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "jamaibase.version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
