# See https://gitlab.liris.cnrs.fr/pagoda/tools/mkdocs_template/-/blob/master/user_config/pyproject.toml

# -----------------------------------------------------------------------------
# Pytest configuration
# https://docs.pytest.org/en/latest/customize.html?highlight=pyproject#pyproject-toml

[tool.pytest.ini_options]
log_cli = true
asyncio_mode = "auto"
# log_cli_level = "DEBUG"
addopts = "--cov=owl --doctest-modules"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:tensorflow.*",
    "ignore::DeprecationWarning:tensorboard.*",
    "ignore::DeprecationWarning:matplotlib.*",
    "ignore::DeprecationWarning:flatbuffers.*",
]


# -----------------------------------------------------------------------------
# Black (Option-less formatter) configuration
# https://black.readthedocs.io/en/stable/index.html

[tool.black]
line-length = 99
target-version = ["py310"]
include = '\.pyi?$|\.ipynb'

# -----------------------------------------------------------------------------
# For sorting imports
# This is used by VS Code to sort imports
# https://code.visualstudio.com/docs/python/editing#_sort-imports
# https://timothycrosley.github.io/isort/

[tool.isort]
# Profile
# Base profile type to use for configuration. Profiles include: black, django,
# pycharm, google, open_stack, plone, attrs, hug. As well as any shared profiles.
# Default: ``
profile = "black"
# Treat project as a git repository and ignore files listed in .gitignore
# Default: `False`
skip_gitignore = true
# The max length of an import line (used for wrapping long imports).
# Default: `79`
line_length = 99
known_first_party = ["jamaibase", "owl", "docio"]

# -----------------------------------------------------------------------------
# setuptools
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
# setuptools-scm considers all files tracked by git to be data files
requires = ["setuptools>=62.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "owl"
description = "Owl: API server for JamAI Base."
readme = "README.md"
requires-python = "~=3.10"
# keywords = ["one", "two"]
license = { text = "Proprietary" }
classifiers = [ # https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Information Technology",
    "Operating System :: Unix",
]
dependencies = [
    "fastapi~=0.111.0",
    "filelock~=3.15.1",
    "gunicorn~=22.0.0",
    "httpx~=0.27.0",
    "jamaibase>=0.2.0",
    "lancedb==0.8.0",              # 0.9.0 has issues with row deletion
    "langchain-community~=0.2.5",
    "langchain~=0.2.5",
    "litellm~=1.41.13",
    "loguru~=0.7.2",
    "numpy~=1.26.4",
    "openai~=1.34.0",
    "openmeter~=1.0.0b89",
    "orjson~=3.10.5",
    "pandas~=2.2",
    "Pillow~=10.3.0",
    "pyarrow~=15.0.0",
    "pycryptodomex~=3.20.0",
    "pydantic-settings~=2.3.3",
    "pydantic~=2.7.4",
    "pyjwt~=2.8.0",
    "pylance==0.11.0",             # 0.13.0 has issues with row deletion
    "python-multipart~=0.0.9",
    "redis[hiredis]~=5.0.6",
    "sqlmodel~=0.0.19",
    "srsly~=2.4.8",
    "stripe~=9.12.0",
    "tantivy~=0.22.0",
    "tenacity~=8.4.1",
    "tiktoken~=0.7.0",
    "toml~=0.10.2",
    "tqdm~=4.66.4",
    "typer[all]~=0.12.3",
    "typing_extensions>=4.12.2",
    "unstructured-client @ git+https://github.com/EmbeddedLLM/unstructured-python-client.git@fix-nested-asyncio-conflict-with-uvloop#egg=unstructured-client",
    "uuid-utils~=0.8.0",
    "uuid7~=0.1.0",
    "uvicorn[standard]~=0.28.1",   # 0.30.x seems to have issues with shutdown signal handling?
] # Sort your dependencies https://sortmylist.com/
dynamic = ["version"]

[project.optional-dependencies]
lint = ["black~=24.4.2", "flake8~=7.0.0"]
test = [
    "flaky~=3.8.1",
    "locust~=2.29.1",
    "mypy~=1.10.1",
    "pytest-asyncio>=0.23.7",
    "pytest-cov~=5.0.0",
    "pytest~=8.2.2",
]
docs = [
    "furo~=2024.5.6",              # Sphinx theme (nice looking, with dark mode)
    "myst-parser~=3.0.1",
    "sphinx-autobuild~=2024.4.16",
    "sphinx-copybutton~=0.5.2",
    "sphinx~=7.3.7",
    "sphinx_rtd_theme~=2.0.0",     # Sphinx theme
]
build = [
    "build",
    "twine",
] # https://realpython.com/pypi-publish-python-package/#build-your-package
all = [
    "owl[lint,test,docs,build]", # https://hynek.me/articles/python-recursive-optional-dependencies/
]

# [project.scripts]
# owl = "owl.scripts.example:main_cli"

[tool.setuptools.dynamic]
version = { attr = "owl.version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
owl = ["**/*.json"]
