# See https://gitlab.liris.cnrs.fr/pagoda/tools/mkdocs_template/-/blob/master/user_config/pyproject.toml

# -----------------------------------------------------------------------------
# Pytest configuration
# https://docs.pytest.org/en/latest/customize.html?highlight=pyproject#pyproject-toml

[tool.pytest.ini_options]
timeout = 90
log_cli = true
asyncio_mode = "auto"
# log_cli_level = "DEBUG"
addopts = "--cov=owl --doctest-modules"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:tensorflow.*",
    "ignore::DeprecationWarning:tensorboard.*",
    "ignore::DeprecationWarning:matplotlib.*",
    "ignore::DeprecationWarning:flatbuffers.*",
]

# -----------------------------------------------------------------------------
# Ruff configuration
# https://docs.astral.sh/ruff/

[tool.ruff]
line-length = 99
indent-width = 4
target-version = "py312"
extend-include = [".pyi?$", ".ipynb"]
extend-exclude = ["archive/*"]
respect-gitignore = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E1", "E4", "E7", "E9", "F", "I", "W1", "W2", "W3", "W6", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["jamaibase", "owl", "docio"]

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Path",
    "fastapi.Query",
]

# -----------------------------------------------------------------------------
# setuptools
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
# setuptools-scm considers all files tracked by git to be data files
requires = ["setuptools>=62.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "owl"
description = "Owl: API server for JamAI Base."
readme = "README.md"
requires-python = "~=3.10"
# keywords = ["one", "two"]
license = { text = "Apache 2.0" }
classifiers = [ # https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Information Technology",
    "Operating System :: Unix",
]
dependencies = [
    "aioboto3~=7.0.0",
    "aiobotocore~=2.15.0",
    "aiofiles~=24.1.0",
    "authlib~=1.3.2",
    "boto3~=1.35.7",
    "celery~=5.4.0",
    "duckdb~=1.1.3",
    "fastapi[standard]~=0.115.2",
    "filelock~=3.15.1",
    "flower~=2.0.1",
    "gunicorn~=22.0.0",
    "httpx~=0.27.0",
    "itsdangerous~=2.2.0",
    "jamaibase>=0.2.1",
    # lancedb 0.9.0 has issues with row deletion
    "lancedb==0.12.0",
    "langchain-community~=0.2.12",
    "langchain~=0.2.14",
    "litellm~=1.50.0",
    "loguru~=0.7.2",
    "natsort[fast]>=8.4.0",
    "numpy>=1.26.4",
    "openai>=1.51.0",
    "openmeter~=1.0.0b89",
    "orjson~=3.10.7",
    "pandas~=2.2",
    "Pillow~=10.4.0",
    "pyarrow~=17.0.0",
    "pycryptodomex~=3.20.0",
    "pydantic-settings~=2.4.0",
    "pydantic[email,timezone]~=2.8.2",
    "pydub~=0.25.1",
    "pyjwt~=2.9.0",
    # pylance 0.13.0 has issues with row deletion
    "pylance==0.16.0",
    "python-multipart~=0.0.9",
    "redis[hiredis]~=5.0.8",
    "SQLAlchemy>=2.0",
    "sqlmodel~=0.0.21",
    "srsly~=2.4.8",
    # starlette 0.38.3 and 0.38.4 seem to have issues with background tasks
    "starlette~=0.41.3",
    "stripe~=9.12.0",
    "tantivy~=0.22.0",
    "tenacity~=8.5.0",
    "tiktoken~=0.7.0",
    "toml~=0.10.2",
    "tqdm~=4.66.5",
    "typer[all]~=0.12.4",
    "typing_extensions>=4.12.2",
    "unstructured-client @ git+https://github.com/EmbeddedLLM/unstructured-python-client.git@fix-nested-asyncio-conflict-with-uvloop#egg=unstructured-client",
    "uuid-utils~=0.9.0",
    "uuid7~=0.1.0",
    # uvicorn 0.29.x shutdown seems unclean and 0.30.x child process sometimes dies
    "uvicorn[standard]~=0.28.1",
] # Sort your dependencies https://sortmylist.com/
dynamic = ["version"]

[project.optional-dependencies]
lint = ["ruff~=0.6.1"]
test = [
    "flaky~=3.8.1",
    "mypy~=1.11.1",
    "pytest-asyncio>=0.23.8",
    "pytest-cov~=5.0.0",
    "pytest-timeout>=2.3.1",
    "pytest~=8.3.2",
]
docs = [
    "furo~=2024.8.6",              # Sphinx theme (nice looking, with dark mode)
    "myst-parser~=4.0.0",
    "sphinx-autobuild~=2024.4.16",
    "sphinx-copybutton~=0.5.2",
    "sphinx>=7.4.7",               # sphinx-rtd-theme requires < 8
    "sphinx_rtd_theme~=2.0.0",     # Sphinx theme
]
build = [
    "build",
    "twine",
] # https://realpython.com/pypi-publish-python-package/#build-your-package
all = [
    "owl[lint,test,docs,build]", # https://hynek.me/articles/python-recursive-optional-dependencies/
]

# [project.scripts]
# owl = "owl.scripts.example:main_cli"

[tool.setuptools.dynamic]
version = { attr = "owl.version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
owl = ["**/*.json", "**/*.parquet"]
