# See https://gitlab.liris.cnrs.fr/pagoda/tools/mkdocs_template/-/blob/master/user_config/pyproject.toml

# -----------------------------------------------------------------------------
# Pytest configuration
# https://docs.pytest.org/en/latest/customize.html?highlight=pyproject#pyproject-toml

[tool.pytest.ini_options]
log_cli = true
asyncio_mode = "auto"
# log_cli_level = "DEBUG"
# addopts = "--cov=docio --doctest-modules"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:tensorflow.*",
    "ignore::DeprecationWarning:tensorboard.*",
    "ignore::DeprecationWarning:matplotlib.*",
    "ignore::DeprecationWarning:flatbuffers.*",
]


# -----------------------------------------------------------------------------
# Black (Option-less formatter) configuration
# https://black.readthedocs.io/en/stable/index.html

[tool.black]
line-length = 99
target-version = ["py310"]
include = '\.pyi?$|\.ipynb'

# -----------------------------------------------------------------------------
# For sorting imports
# This is used by VS Code to sort imports
# https://code.visualstudio.com/docs/python/editing#_sort-imports
# https://timothycrosley.github.io/isort/

[tool.isort]
# Profile
# Base profile type to use for configuration. Profiles include: black, django,
# pycharm, google, open_stack, plone, attrs, hug. As well as any shared profiles.
# Default: ``
profile = "black"
# Treat project as a git repository and ignore files listed in .gitignore
# Default: `False`
skip_gitignore = true
# The max length of an import line (used for wrapping long imports).
# Default: `79`
line_length = 99
known_first_party = ["jamaibase", "owl", "docio"]

# -----------------------------------------------------------------------------
# setuptools
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
# setuptools-scm considers all files tracked by git to be data files
requires = ["setuptools>=62.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "docio"
description = "DocIO service for PDF loading and parsing."
readme = "README.md"
requires-python = "~=3.10"
# keywords = ["one", "two"]
license = { text = "Proprietary" }
classifiers = [ # https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Information Technology",
    "Operating System :: Unix",
]
dependencies = [
    "accelerate~=0.28",
    "fastapi~=0.110.0",
    "gunicorn~=21.2.0",
    "jamaibase>=0.0.1",
    "langchain-community~=0.0.25",
    "langchain~=0.1.10",
    "loguru~=0.7.2",
    "matplotlib",
    "pandas~=2.2.2",
    "pdfplumber~=0.10.4",          # pdfplumber
    "pydantic-settings>=2.2.1",
    "pydantic~=2.6.3",
    "pypdfium2~=4.27.0",
    "python-multipart",
    "s3fs",
    "timm",
    "torch",
    "transformers>=4.38.2",
    "unstructured-client @ git+https://github.com/EmbeddedLLM/unstructured-python-client.git@fix-nested-asyncio-conflict-with-uvloop#egg=unstructured-client",
    "unstructured~=0.14.9",
    "uvicorn[standard]~=0.27.1",
] # Sort your dependencies https://sortmylist.com/
dynamic = ["version"]

[project.optional-dependencies]
lint = ["black~=24.4.2", "flake8~=7.0.0"]
test = [
    "flaky~=3.7.0",
    "mypy~=1.5.1",
    "openai~=1.9.0",
    "pytest-cov~=4.1.0",
    "pytest~=7.4.2",
]
docs = [
    "furo~=2023.9.10",             # Sphinx theme (nice looking, with dark mode)
    "myst-parser~=2.0.0",
    "sphinx-autobuild~=2021.3.14",
    "sphinx-copybutton~=0.5.2",
    "sphinx~=7.2.6",
    "sphinx_rtd_theme~=1.3.0",     # Sphinx theme
]
build = [
    "build",
    "twine",
] # https://realpython.com/pypi-publish-python-package/#build-your-package
all = [
    "docio[lint,test,docs,build]", # https://hynek.me/articles/python-recursive-optional-dependencies/
]

# [project.scripts]
# docio = "docio.scripts.example:main_cli"

[tool.setuptools.dynamic]
version = { attr = "docio.version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
docio = ["**/*.json"]
